--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1{
     color:yellowgreen;
     width: auto;
     background-color: grey;
-    margin:20px;
+    margin:auto;
 }
 h2{
     font-weight: 400;
