--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ h1{
     color:yellowgreen;
     width: auto;
     background-color: grey;
-    margin:auto;
+    margin-left:auto;
+    margin-right:auto;
 }
 h2{
     font-weight: 400;
